Fix user-profile styles spilling over (for real this time)

--- a/code/svelte/static/styles/user-profile.css
+++ b/code/svelte/static/styles/user-profile.css
@@ -1,3 +1,7 @@
+body {
+    padding: 0;
+}
+
 .contents > section {
     margin-bottom: 1.5rem;
 }
